--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
   - "3.4"
 cache: pip
 install:
-  - pip install testfixtures==5.4.0 
+  - pip install -r requirements.txt
 script:
   - python -m unittest discover
+after-script:
+  - bash coverage.sh
